[package]
name = "abc135"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc135-a = { alias = "a", problem = "https://atcoder.jp/contests/abc135/tasks/abc135_a" }
abc135-b = { alias = "b", problem = "https://atcoder.jp/contests/abc135/tasks/abc135_b" }
abc135-c = { alias = "c", problem = "https://atcoder.jp/contests/abc135/tasks/abc135_c" }
abc135-d = { alias = "d", problem = "https://atcoder.jp/contests/abc135/tasks/abc135_d" }
abc135-e = { alias = "e", problem = "https://atcoder.jp/contests/abc135/tasks/abc135_e" }
abc135-f = { alias = "f", problem = "https://atcoder.jp/contests/abc135/tasks/abc135_f" }

[[bin]]
name = "abc135-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc135-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc135-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc135-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc135-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc135-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
