[package]
name = "abc139"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc139-a = { alias = "a", problem = "https://atcoder.jp/contests/abc139/tasks/abc139_a" }
abc139-b = { alias = "b", problem = "https://atcoder.jp/contests/abc139/tasks/abc139_b" }
abc139-c = { alias = "c", problem = "https://atcoder.jp/contests/abc139/tasks/abc139_c" }
abc139-d = { alias = "d", problem = "https://atcoder.jp/contests/abc139/tasks/abc139_d" }
abc139-e = { alias = "e", problem = "https://atcoder.jp/contests/abc139/tasks/abc139_e" }
abc139-f = { alias = "f", problem = "https://atcoder.jp/contests/abc139/tasks/abc139_f" }

[[bin]]
name = "abc139-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc139-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc139-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc139-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc139-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc139-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
