[package]
name = "abc202"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc202-a = { alias = "a", problem = "https://atcoder.jp/contests/abc202/tasks/abc202_a" }
abc202-b = { alias = "b", problem = "https://atcoder.jp/contests/abc202/tasks/abc202_b" }
abc202-c = { alias = "c", problem = "https://atcoder.jp/contests/abc202/tasks/abc202_c" }
abc202-d = { alias = "d", problem = "https://atcoder.jp/contests/abc202/tasks/abc202_d" }
abc202-e = { alias = "e", problem = "https://atcoder.jp/contests/abc202/tasks/abc202_e" }
abc202-f = { alias = "f", problem = "https://atcoder.jp/contests/abc202/tasks/abc202_f" }

[[bin]]
name = "abc202-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc202-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc202-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc202-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc202-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc202-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
