[package]
name = "abc230"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc230-a = { alias = "a", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_a" }
abc230-b = { alias = "b", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_b" }
abc230-c = { alias = "c", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_c" }
abc230-d = { alias = "d", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_d" }
abc230-e = { alias = "e", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_e" }
abc230-f = { alias = "f", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_f" }
abc230-g = { alias = "g", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_g" }
abc230-h = { alias = "h", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_h" }

[[bin]]
name = "abc230-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc230-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc230-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc230-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc230-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc230-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc230-g"
path = "src/bin/g.rs"

[[bin]]
name = "abc230-h"
path = "src/bin/h.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
