[package]
name = "abc237"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc237-a = { alias = "a", problem = "https://atcoder.jp/contests/abc237/tasks/abc237_a" }
abc237-b = { alias = "b", problem = "https://atcoder.jp/contests/abc237/tasks/abc237_b" }
abc237-c = { alias = "c", problem = "https://atcoder.jp/contests/abc237/tasks/abc237_c" }
abc237-d = { alias = "d", problem = "https://atcoder.jp/contests/abc237/tasks/abc237_d" }
abc237-e = { alias = "e", problem = "https://atcoder.jp/contests/abc237/tasks/abc237_e" }
abc237-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc237/tasks/abc237_h" }
abc237-f = { alias = "f", problem = "https://atcoder.jp/contests/abc237/tasks/abc237_f" }
abc237-g = { alias = "g", problem = "https://atcoder.jp/contests/abc237/tasks/abc237_g" }

[[bin]]
name = "abc237-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc237-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc237-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc237-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc237-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc237-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc237-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc237-g"
path = "src/bin/g.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
