[package]
name = "abc304"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc304-a = { alias = "a", problem = "https://atcoder.jp/contests/abc304/tasks/abc304_a" }
abc304-b = { alias = "b", problem = "https://atcoder.jp/contests/abc304/tasks/abc304_b" }
abc304-c = { alias = "c", problem = "https://atcoder.jp/contests/abc304/tasks/abc304_c" }
abc304-d = { alias = "d", problem = "https://atcoder.jp/contests/abc304/tasks/abc304_d" }
abc304-e = { alias = "e", problem = "https://atcoder.jp/contests/abc304/tasks/abc304_e" }
abc304-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc304/tasks/abc304_h" }
abc304-f = { alias = "f", problem = "https://atcoder.jp/contests/abc304/tasks/abc304_f" }
abc304-g = { alias = "g", problem = "https://atcoder.jp/contests/abc304/tasks/abc304_g" }

[[bin]]
name = "abc304-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc304-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc304-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc304-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc304-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc304-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc304-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc304-g"
path = "src/bin/g.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
