[package]
name = "ahc040"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
ahc040-a = { alias = "a", problem = "https://atcoder.jp/contests/ahc040/tasks/ahc040_a" }

[[bin]]
name = "ahc040-a"
path = "src/bin/a.rs"

[[bin]]
name = "ahc040-b"
path = "src/bin/b.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
ac-library-rs = "=0.1.1"
superslice = "1.0.0"
itertools = "0.13.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
