[package]
name = "ahc043"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
ahc043-a = { alias = "a", problem = "https://atcoder.jp/contests/ahc043/tasks/ahc043_a" }

[[bin]]
name = "ahc043-a"
path = "src/bin/a.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
ac-library-rs = "=0.1.1"
superslice = "1.0.0"
itertools = "=0.11.0"
rustc-hash = "=1.1.0"
rand = "0.8.5"

[dev-dependencies]
