[package]
name = "abclib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
ac-library-rs = "=0.1.1"
superslice = "1.0.0"
itertools = "=0.11.0"
rustc-hash = "=1.1.0"
rand = "=0.8.5"
