[package]
name = "abc142"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc142-a = { alias = "a", problem = "https://atcoder.jp/contests/abc142/tasks/abc142_a" }
abc142-b = { alias = "b", problem = "https://atcoder.jp/contests/abc142/tasks/abc142_b" }
abc142-c = { alias = "c", problem = "https://atcoder.jp/contests/abc142/tasks/abc142_c" }
abc142-d = { alias = "d", problem = "https://atcoder.jp/contests/abc142/tasks/abc142_d" }
abc142-e = { alias = "e", problem = "https://atcoder.jp/contests/abc142/tasks/abc142_e" }
abc142-f = { alias = "f", problem = "https://atcoder.jp/contests/abc142/tasks/abc142_f" }

[[bin]]
name = "abc142-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc142-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc142-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc142-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc142-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc142-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
