[package]
name = "abc149"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc149-a = { alias = "a", problem = "https://atcoder.jp/contests/abc149/tasks/abc149_a" }
abc149-b = { alias = "b", problem = "https://atcoder.jp/contests/abc149/tasks/abc149_b" }
abc149-c = { alias = "c", problem = "https://atcoder.jp/contests/abc149/tasks/abc149_c" }
abc149-d = { alias = "d", problem = "https://atcoder.jp/contests/abc149/tasks/abc149_d" }
abc149-e = { alias = "e", problem = "https://atcoder.jp/contests/abc149/tasks/abc149_e" }
abc149-f = { alias = "f", problem = "https://atcoder.jp/contests/abc149/tasks/abc149_f" }

[[bin]]
name = "abc149-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc149-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc149-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc149-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc149-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc149-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
