[package]
name = "abc204"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc204-a = { alias = "a", problem = "https://atcoder.jp/contests/abc204/tasks/abc204_a" }
abc204-b = { alias = "b", problem = "https://atcoder.jp/contests/abc204/tasks/abc204_b" }
abc204-c = { alias = "c", problem = "https://atcoder.jp/contests/abc204/tasks/abc204_c" }
abc204-d = { alias = "d", problem = "https://atcoder.jp/contests/abc204/tasks/abc204_d" }
abc204-e = { alias = "e", problem = "https://atcoder.jp/contests/abc204/tasks/abc204_e" }
abc204-f = { alias = "f", problem = "https://atcoder.jp/contests/abc204/tasks/abc204_f" }

[[bin]]
name = "abc204-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc204-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc204-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc204-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc204-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc204-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
