[package]
name = "abc234"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc234-a = { alias = "a", problem = "https://atcoder.jp/contests/abc234/tasks/abc234_a" }
abc234-b = { alias = "b", problem = "https://atcoder.jp/contests/abc234/tasks/abc234_b" }
abc234-c = { alias = "c", problem = "https://atcoder.jp/contests/abc234/tasks/abc234_c" }
abc234-d = { alias = "d", problem = "https://atcoder.jp/contests/abc234/tasks/abc234_d" }
abc234-e = { alias = "e", problem = "https://atcoder.jp/contests/abc234/tasks/abc234_e" }
abc234-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc234/tasks/abc234_h" }
abc234-f = { alias = "f", problem = "https://atcoder.jp/contests/abc234/tasks/abc234_f" }
abc234-g = { alias = "g", problem = "https://atcoder.jp/contests/abc234/tasks/abc234_g" }

[[bin]]
name = "abc234-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc234-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc234-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc234-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc234-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc234-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc234-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc234-g"
path = "src/bin/g.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
