[package]
name = "abc252"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc252-a = { alias = "a", problem = "https://atcoder.jp/contests/abc252/tasks/abc252_a" }
abc252-b = { alias = "b", problem = "https://atcoder.jp/contests/abc252/tasks/abc252_b" }
abc252-c = { alias = "c", problem = "https://atcoder.jp/contests/abc252/tasks/abc252_c" }
abc252-d = { alias = "d", problem = "https://atcoder.jp/contests/abc252/tasks/abc252_d" }
abc252-e = { alias = "e", problem = "https://atcoder.jp/contests/abc252/tasks/abc252_e" }
abc252-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc252/tasks/abc252_h" }
abc252-f = { alias = "f", problem = "https://atcoder.jp/contests/abc252/tasks/abc252_f" }
abc252-g = { alias = "g", problem = "https://atcoder.jp/contests/abc252/tasks/abc252_g" }

[[bin]]
name = "abc252-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc252-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc252-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc252-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc252-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc252-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc252-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc252-g"
path = "src/bin/g.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
