[package]
name = "abc294"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc294-a = { alias = "a", problem = "https://atcoder.jp/contests/abc294/tasks/abc294_a" }
abc294-b = { alias = "b", problem = "https://atcoder.jp/contests/abc294/tasks/abc294_b" }
abc294-c = { alias = "c", problem = "https://atcoder.jp/contests/abc294/tasks/abc294_c" }
abc294-d = { alias = "d", problem = "https://atcoder.jp/contests/abc294/tasks/abc294_d" }
abc294-e = { alias = "e", problem = "https://atcoder.jp/contests/abc294/tasks/abc294_e" }
abc294-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc294/tasks/abc294_h" }
abc294-f = { alias = "f", problem = "https://atcoder.jp/contests/abc294/tasks/abc294_f" }
abc294-g = { alias = "g", problem = "https://atcoder.jp/contests/abc294/tasks/abc294_g" }

[[bin]]
name = "abc294-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc294-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc294-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc294-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc294-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc294-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc294-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc294-g"
path = "src/bin/g.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
