[package]
name = "abc300"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc300-a = { alias = "a", problem = "https://atcoder.jp/contests/abc300/tasks/abc300_a" }
abc300-b = { alias = "b", problem = "https://atcoder.jp/contests/abc300/tasks/abc300_b" }
abc300-c = { alias = "c", problem = "https://atcoder.jp/contests/abc300/tasks/abc300_c" }
abc300-d = { alias = "d", problem = "https://atcoder.jp/contests/abc300/tasks/abc300_d" }
abc300-e = { alias = "e", problem = "https://atcoder.jp/contests/abc300/tasks/abc300_e" }
abc300-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc300/tasks/abc300_h" }
abc300-f = { alias = "f", problem = "https://atcoder.jp/contests/abc300/tasks/abc300_f" }
abc300-g = { alias = "g", problem = "https://atcoder.jp/contests/abc300/tasks/abc300_g" }

[[bin]]
name = "abc300-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc300-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc300-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc300-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc300-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc300-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc300-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc300-g"
path = "src/bin/g.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
