[package]
name = "abc364"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc364-a = { alias = "a", problem = "https://atcoder.jp/contests/abc364/tasks/abc364_a" }
abc364-b = { alias = "b", problem = "https://atcoder.jp/contests/abc364/tasks/abc364_b" }
abc364-c = { alias = "c", problem = "https://atcoder.jp/contests/abc364/tasks/abc364_c" }
abc364-d = { alias = "d", problem = "https://atcoder.jp/contests/abc364/tasks/abc364_d" }
abc364-e = { alias = "e", problem = "https://atcoder.jp/contests/abc364/tasks/abc364_e" }
abc364-f = { alias = "f", problem = "https://atcoder.jp/contests/abc364/tasks/abc364_f" }
abc364-g = { alias = "g", problem = "https://atcoder.jp/contests/abc364/tasks/abc364_g" }

[[bin]]
name = "abc364-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc364-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc364-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc364-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc364-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc364-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc364-g"
path = "src/bin/g.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
ac-library-rs = "=0.1.1"
superslice = "1.0.0"

[dev-dependencies]
