[package]
name = "adt_medium_20250506_3"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
adt_medium_20250506_3-c = { alias = "c", problem = "https://atcoder.jp/contests/adt_medium_20250506_3/tasks/abc268_b" }
adt_medium_20250506_3-d = { alias = "d", problem = "https://atcoder.jp/contests/adt_medium_20250506_3/tasks/abc314_b" }
adt_medium_20250506_3-e = { alias = "e", problem = "https://atcoder.jp/contests/adt_medium_20250506_3/tasks/abc273_c" }
adt_medium_20250506_3-f = { alias = "f", problem = "https://atcoder.jp/contests/adt_medium_20250506_3/tasks/abc292_c" }
adt_medium_20250506_3-g = { alias = "g", problem = "https://atcoder.jp/contests/adt_medium_20250506_3/tasks/abc379_d" }

[[bin]]
name = "adt_medium_20250506_3-c"
path = "src/bin/c.rs"

[[bin]]
name = "adt_medium_20250506_3-d"
path = "src/bin/d.rs"

[[bin]]
name = "adt_medium_20250506_3-e"
path = "src/bin/e.rs"

[[bin]]
name = "adt_medium_20250506_3-f"
path = "src/bin/f.rs"

[[bin]]
name = "adt_medium_20250506_3-g"
path = "src/bin/g.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
ac-library-rs = "=0.1.1"
superslice = "1.0.0"
itertools = "=0.11.0"
num = "=0.4.1"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
num-derive = "=0.4.0"
rustc-hash = "=1.1.0"
rand = "=0.8.5"

[dev-dependencies]
